# Zus

./: .gitignore  README.md
frontend/: App.jsx  ZusCampaigns.jsx  config.js  index.html  package.json  pnpm-lock.yaml
tui/: Cargo.toml
tui/src/: error.rs  main.rs  types.rs
userslist/: Cargo.toml
userslist/examples/: claim_fixture.rs
userslist/src/: error.rs  filecoin.rs  main.rs  merkle.rs  postgres.rs  type.rs  types.rs
verifier/: README.md  foundry.toml
verifier/scripts/: call_proof.sh  deploy_shared_verifier.sh  generate_shared_verifier.sh
verifier/src/: ZusVerifier.sol
zus_addy/: Nargo.toml  Prover.toml
zus_addy/src/: main.nr
zusprotocol/: README.md  foundry.toml
zusprotocol/cache/: solidity-files-cache.json
zusprotocol/scripts/: claim_campaign.sh  e2e_api_campaign_demo.sh
zusprotocol/src/: CampaignRegistry.sol  ZusProtocol.sol
zusprotocol/test/: CampaignRegistry.t.sol  ZusProtocol.t.sol
