[package]
name = "userslist"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
hex = "0.4.3"
rs_merkle = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "net"] }
uuid = { version = "1.18.1", features = ["v4"] }
